--- a/style.css
+++ b/style.css
@@ -1,7 +1,29 @@
-html, body{
-    height: 100%;
- }
-  
-#map{
-   height: 100%;
+body {
+    margin: 0;
+    padding: 0;
+}
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+#fly {
+    display: block;
+    position: relative;
+    margin: 30px auto;
+    width: 15%;
+    height: 50px;
+    padding: 10px;
+    border: none;
+    border-radius: 50px;
+    font-size: 20px;
+    text-align: center;
+    color: #fff;
+    background: #0067c0;
+    cursor: pointer;
+}
+#fly:hover {
+    transform: scale(1.1, 1.1);
 }
